test/libsolidity/syntaxTests/code/usage_as_identifier/usage_as_struct_member.sol
contract X {
    struct codeInStruct {
        string code;
    }
}
// ----
// ParserError 2314: (54-58): Expected identifier but got 'code'
